Bug 308833 - Saving does not work on a window of an "Encapsulated Message"
Summary: Saving does not work on a window of an "Encapsulated Message"
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-22 20:41 UTC by Albert Astals Cid
Modified: 2012-10-25 10:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments
The said email (6.65 KB, application/mbox)
2012-10-22 20:42 UTC, Albert Astals Cid
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2012-10-22 20:41:50 UTC
Trying to save an "Encapsulated Message" from its own window does not work neither from the menu nor the shortcut

Reproducible: Always

Steps to Reproduce:
1. Open the attached message
2. Click on the "Encapsulated Message" header/link
3. Observe a new window to open only with that message
4. Try to save the message via the menu
Actual Results:  
No save dialog opens

Expected Results:  
A save dialog opens
Comment 1 Albert Astals Cid 2012-10-22 20:42:43 UTC
Created attachment 74737 [details]
The said email
Comment 2 Laurent Montel 2012-10-24 06:50:17 UTC
Yes I saw it.
I add it to my todo 
Thanks
Comment 3 Laurent Montel 2012-10-25 10:22:19 UTC
Git commit 00320c4052430baad3662b1bce9d31272dda9c4e by Montel Laurent.
Committed on 25/10/2012 at 12:21.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 308833 - Saving does not work on a window of an "Encapsulated

Message"

FIXED-IN: 4.9.3

M  +0    -4    messageviewer/viewer_p.cpp

http://commits.kde.org/kdepim/00320c4052430baad3662b1bce9d31272dda9c4e