Fix Bug 308833 - Saving does not work on a window of an "Encapsulated

Message"

FIXED-IN: 4.9.3
BUG: 308833