messageviewer/viewer_p.cpp
@@ -2771,10 +2771,6 @@ void ViewerPrivate::slotUrlCopy()
 
 void ViewerPrivate::slotSaveMessage()
 {
-  if ( !mMessageItem.isValid() ) {
-    return;
-  }
-
   if ( !mMessageItem.hasPayload<KMime::Message::Ptr>() ) {
     if ( mMessageItem.isValid() ) {
       kWarning() << "Payload is not a MessagePtr!";
